--- a/loja.html
+++ b/loja.html
@@ -21,7 +21,7 @@
         content: "";
         position: fixed;
         inset: 0;
-        background-image: url("https://i.imgur.com/8Q8R9Dk.png");
+        background-image: ;
         background-size: cover;
         pointer-events: none;
         animation: snowMove 15s linear infinite;
