--- a/roleta.html
+++ b/roleta.html
@@ -28,7 +28,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("https://i.imgur.com/8Q8R9Dk.png");
+        background-image: ;
         pointer-events: none;
         animation: neve 12s linear infinite;
         opacity: 0.45;
