Fix text for sound identification mission

--- a/missao_base.html
+++ b/missao_base.html
@@ -527,7 +527,7 @@
           titulo: "Que Som é Esse?",
           desc:
             "Você receberá 9 áudios curtos com sons de coisas da natureza misturadas. 🎧🌀\n\n" +
-            "Sua missão é identificar no mínimo 3 dos sons que aparecem nele.\n" +
+            "Sua missão é identificar no mínimo 3 sons diferentes que aparecem neles.\n" +
             "Pode ter barulho de animal, planeta, chuva, mar… qualquer coisa!\n\n" +
             "Me envie seus palpites.\n",
           pts: 40,
