Update Christmas special item description

--- a/loja.html
+++ b/loja.html
@@ -217,7 +217,7 @@
         { nome: "Intermediário 3 💄", preco: 60, id: "inter3" },
         { nome: "Intermediário 4 🧈", preco: 60, id: "inter4" },
 
-        { nome: "Especial de Natal 🎅", preco: 120, id: "especialNatal" },
+        { nome: "Especial de Natal (VESTIDO JÁ ADQUIRIDO)🎅", preco: 120, id: "especialNatal" },
         { nome: "Especial de Ano Novo 🎆", preco: 120, id: "especialAno" },
         { nome: "Especial Surpresa 🎁", preco: 120, id: "especial3" },
       ];
