Update point values for various challenges

--- a/missao_base.html
+++ b/missao_base.html
@@ -443,7 +443,7 @@
             "Para completar esta missão, você precisa me vencer em UMA partida de UNO.\n" +
             "Eu não vou pegar leve, então se esforce. Estou preparado para qualquer jogada.\n\n" +
             "Boa sorte... você vai precisar.",
-          pts: 40,
+          pts: 30,
           senha: "LUA ...... Fique atenta as bordas do site 👀",
         },
         22: {
@@ -454,8 +454,8 @@
             "Não precisa ser de uma vez, obviamente.\n\n" +
             "Basta me mandar uma foto no começo, de uma garrafa de 1 litro ou duas de 500 ml cheias, e depois uma foto delas vazias.\n\n" +
             "Seu rim agradece, eu também.",
-          pts: 60,
-          senha: "BAURO",
+          pts: 45,
+          senha: "BAURU",
         },
         23: {
           titulo: "Retrato Perfeito",
@@ -463,7 +463,7 @@
             "Mostre seu talento artístico! 🎨\n\n" +
             "Você terá 20 minutos para fazer um retrato do seu namorado da maneira que quiser, realista, fofinho, estilizado, palito, o que sua criatividade mandar.\n\n" +
             "O importante é: terminar no tempo, se esforçar, e me enviar uma foto.",
-          pts: 80,
+          pts: 55,
           senha:
             "IMAGINARIO ... Imagine o canto superior direito do site... ou talvez o esquerdo 👀",
         },
@@ -475,7 +475,7 @@
             "Você receberá um texto aparentemente normal, mas com 7 palavras escondidas que não pertencem à história.\n\n" +
             "Identifique-as e me envie todas elas!’\n\n" +
             "Atenção aos detalhes, você nunca está errada!",
-          pts: 60,
+          pts: 50,
           senha: "MASCARA",
         },
 
@@ -486,7 +486,7 @@
             "Você receberá partes embaralhadas dessa foto em um envelope. Sua missão é reorganizar tudo e reconstruir a versão original.\n" +
             "No final, envie a foto refeita para mim.\n\n" +
             "Capriche, aposto que se surpreenderá.",
-          pts: 80,
+          pts: 70,
           senha: "BOLSA ... Pontos nos cantos... e talvez no meio? 👀",
         },
         26: {
@@ -498,7 +498,7 @@
             "• Utilize apenas três cores diferentes para pintar o desenho.\n" +
             "• Para cada decoração (bolinha, estrela, laço…), você pode usar até 3 traços.\n\n" +
             "Crie a árvore mais criativa possível dentro desse limite de linhas.",
-          pts: 40,
+          pts: 20,
           senha: "COMERCIO",
         },
 
@@ -519,7 +519,7 @@
             "Jogue comigo 10 fases de Fireboy & Watergirl.\n" +
             "Vale qualquer versão do jogo, você escolhe o de computador ou celular.\n\n" +
             "Aliás, já adiantando, eu sou o foguinho 🔥",
-          pts: 60,
+          pts: 40,
           senha: "RODEIO",
         },
 
@@ -552,7 +552,7 @@
             "Escreva um texto imaginando nós dois daqui a dez anos.\n" +
             "Pode ser romântico, engraçado, realista... Da maneira que quiser\n\n" +
             "O futuro merece atenção.",
-          pts: 80,
+          pts: 70,
           senha: "A chave do meu coração é sua",
         },
       };
