Update point values and task titles in HTML

--- a/missao_base.html
+++ b/missao_base.html
@@ -454,7 +454,7 @@
             "Não precisa ser de uma vez, obviamente.\n\n" +
             "Basta me mandar uma foto no começo, de uma garrafa de 1 litro ou duas de 500 ml cheias, e depois uma foto delas vazias.\n\n" +
             "Seu rim agradece, eu também.",
-          pts: 45,
+          pts: 35,
           senha: "BAURU",
         },
         23: {
@@ -463,7 +463,7 @@
             "Mostre seu talento artístico! 🎨\n\n" +
             "Você terá 20 minutos para fazer um retrato do seu namorado da maneira que quiser, realista, fofinho, estilizado, palito, o que sua criatividade mandar.\n\n" +
             "O importante é: terminar no tempo, se esforçar, e me enviar uma foto.",
-          pts: 55,
+          pts: 45,
           senha:
             "IMAGINARIO ... Imagine o canto superior direito do site... ou talvez o esquerdo 👀",
         },
@@ -475,12 +475,12 @@
             "Você receberá um texto aparentemente normal, mas com 7 palavras escondidas que não pertencem à história.\n\n" +
             "Identifique-as e me envie todas elas!’\n\n" +
             "Atenção aos detalhes, você nunca está errada!",
-          pts: 50,
+          pts: 40,
           senha: "MASCARA",
         },
 
         25: {
-          titulo: "Quebra-carta de Natal",
+          titulo: "Quebra-cabeça de Natal",
           desc:
             "Uma foto de Natal especial foi destruída por forças desconhecidas (eu). 🎁💥\n\n" +
             "Você receberá partes embaralhadas dessa foto em um envelope. Sua missão é reorganizar tudo e reconstruir a versão original.\n" +
@@ -508,7 +508,7 @@
             "Escolha um origami e tente dobrá-lo usando apenas uma imagem que não tenha instruções como referência, sem vídeo, sem tutorial passo a passo. 🧠📄\n\n" +
             "Me envie uma foto do origami antes de começar pra mim aprova-lo.\n\n" +
             "No final, envie uma foto do resultado da obra-prima…",
-          pts: 60,
+          pts: 50,
           senha: "ACADEMIA ... Extremidades laterais 👀",
         },
 
@@ -519,7 +519,7 @@
             "Jogue comigo 10 fases de Fireboy & Watergirl.\n" +
             "Vale qualquer versão do jogo, você escolhe o de computador ou celular.\n\n" +
             "Aliás, já adiantando, eu sou o foguinho 🔥",
-          pts: 40,
+          pts: 30,
           senha: "RODEIO",
         },
 
@@ -530,7 +530,7 @@
             "Sua missão é identificar no mínimo 3 sons diferentes que aparecem neles.\n" +
             "Pode ter barulho de animal, planeta, chuva, mar… qualquer coisa!\n\n" +
             "Me envie seus palpites.\n",
-          pts: 40,
+          pts: 35,
           senha: "FORMATURA",
         },
 
@@ -542,7 +542,7 @@
             "Mas precisa seguir esta regra:\n" +
             "• As 5 devem ser de genêros diferentes\n\n" +
             "Se estiver com dificuldade, pode usar as váriações do pop.",
-          pts: 30,
+          pts: 25,
           senha: "LISO",
         },
         31: {
