Update Christmas-related entries in progresso.html

--- a/progresso.html
+++ b/progresso.html
@@ -185,8 +185,8 @@
         { dia: 21, nome: "UNO!!!", senha: "AMERICANA" },
         { dia: 22, nome: "Água é muito bom", senha: "LUA" },
         { dia: 23, nome: "Retrato Perfeito", senha: "BAURU" },
-        { dia: 24, nome: "Caça ao Natal", senha: "IMAGINARIO" },
-        { dia: 25, nome: "Quebra-carta de Natal", senha: "MASCARA" },
+        { dia: 24, nome: "Texto de Natal", senha: "IMAGINARIO" },
+        { dia: 25, nome: "Foto de Natal", senha: "MASCARA" },
         { dia: 26, nome: "Clima Pós-Natal", senha: "BOLSA" },
         { dia: 27, nome: "Origami no Olho", senha: "COMERCIO" },
         { dia: 28, nome: "Fireboy & Watergirl", senha: "ACADEMIA" },
