Update titles for Christmas missions

--- a/missao_base.html
+++ b/missao_base.html
@@ -469,7 +469,7 @@
         },
 
         24: {
-          titulo: "Caça ao Natal",
+          titulo: "Texto de Natal",
           desc:
             "O espírito natalino deixou pistas pelo caminho… e você precisa encontrá-las. 🎄🕵️‍♀️\n\n" +
             "Você receberá um texto aparentemente normal, mas com 7 palavras escondidas que não pertencem à história.\n\n" +
@@ -480,7 +480,7 @@
         },
 
         25: {
-          titulo: "Quebra-cabeça de Natal",
+          titulo: "Foto de Natal",
           desc:
             "Uma foto de Natal especial foi destruída por forças desconhecidas (eu). 🎁💥\n\n" +
             "Você receberá partes embaralhadas dessa foto em um envelope. Sua missão é reorganizar tudo e reconstruir a versão original.\n" +
