Update item name for Presente Básico 5

--- a/loja.html
+++ b/loja.html
@@ -210,7 +210,7 @@
         { nome: "Presente Básico 2 📿", preco: 30, id: "basic2" },
         { nome: "Presente Básico 3 🍬", preco: 30, id: "basic3" },
         { nome: "Presente Básico 4 🔻", preco: 30, id: "basic4" },
-        { nome: "Presente Básico 5 🍫", preco: 30, id: "basic5" },
+        { nome: "Presente Básico 5 ✂️", preco: 30, id: "basic5" },
 
         { nome: "Intermediário 1 🩰", preco: 60, id: "inter1" },
         { nome: "Intermediário 2 ⛸️", preco: 60, id: "inter2" },
