Update Christmas text and clues in missao_base.html

--- a/missao_base.html
+++ b/missao_base.html
@@ -471,10 +471,15 @@
         24: {
           titulo: "Texto de Natal",
           desc:
-            "O espírito natalino deixou pistas pelo caminho… e você precisa encontrá-las. 🎄🕵️‍♀️\n\n" +
-            "Você receberá um texto aparentemente normal, mas com 7 palavras escondidas que não pertencem à história.\n\n" +
+            "Você receberá um poema com 6 palavras escondidas e únicas que você deve procurar (pode ser substantivos ou verbos). 🎄🕵️‍♀️\n\n" +
             "Identifique-as e me envie todas elas!’\n\n" +
-            "Atenção aos detalhes, você nunca está errada!",
+            "Dicas das palavras:\n\n" +
+            "1 - O que o seu namorado mais ama.\n" +
+            "2 - Algo que você gosta de fazer por muitas horas.\n" +
+            "3 - Um doce que você adora.\n" +
+            "4 - Um efeito causado a você quando eu recebo cosquinha sua.\n" +
+            "5 - Aquilo que o pisca-pisca faz.\n" +
+            "6 - Árvore de natal.\n" +
           pts: 40,
           senha: "MASCARA",
         },
