Fix formatting in missao_base.html

--- a/missao_base.html
+++ b/missao_base.html
@@ -479,7 +479,7 @@
             "3 - Um doce que você adora.\n" +
             "4 - Um efeito causado a você quando eu recebo cosquinha sua.\n" +
             "5 - Aquilo que o pisca-pisca faz.\n" +
-            "6 - Árvore de natal.\n" +
+            "6 - Árvore de natal.\n",
           pts: 40,
           senha: "MASCARA",
         },
