--- a/index.html
+++ b/index.html
@@ -188,16 +188,73 @@
         pointer-events: none;
       }
 
-       #btnPontos {
+       /* Botão invisível */
+      #btnTestePontos {
         position: fixed;
         bottom: 5px;
         left: 5px;
         width: 30px;
         height: 30px;
-        opacity: 0; /* totalmente invisível */
+        opacity: 0;
         cursor: pointer;
         z-index: 9999;
       }
+
+      /* Modal */
+      .modal-teste {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 10000;
+      }
+
+      .modal-conteudo {
+        background: white;
+        padding: 25px;
+        border-radius: 15px;
+        width: 260px;
+        text-align: center;
+        box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
+      }
+
+      .modal-conteudo h3 {
+        margin-bottom: 10px;
+        color: #b30000;
+      }
+
+      .modal-conteudo input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 12px;
+        border-radius: 8px;
+        border: 1px solid #ccc;
+        font-size: 16px;
+      }
+
+      .modal-conteudo button {
+        width: 100%;
+        padding: 10px;
+        background: #b30000;
+        color: white;
+        border: none;
+        border-radius: 10px;
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      /* Ative temporariamente se quiser visualizar */
+      /*
+#btnTestePontos {
+  opacity: 0.3;
+  background: black;
+}
+*/
     </style>
   </head>
 
@@ -237,7 +294,17 @@
 
       <div class="points-box" id="pontosDisplay">Carregando seus pontos...</div>
     </div>
- <div id="btnPontos"></div>
+ <!-- MODAL SECRETO DE TESTE -->
+    <div id="modalTeste" class="modal-teste">
+      <div class="modal-conteudo">
+        <h3>Adicionar pontos</h3>
+        <input type="number" id="inputPontos" placeholder="Ex: 50 ou -20" />
+        <button onclick="confirmarTeste()">Confirmar</button>
+      </div>
+    </div>
+
+    <!-- BOTÃO INVISÍVEL -->
+    <div id="btnTestePontos"></div>
     <script>
       /* NEVE MELHORADA */
       for (let i = 0; i < 25; i++) {
@@ -280,6 +347,32 @@
           atualizarPontos();
 
           alert("Pontos adicionados com sucesso!");
+
+          const btnTeste = document.getElementById("btnTestePontos");
+      const modal = document.getElementById("modalTeste");
+
+      btnTeste.addEventListener("click", () => {
+        modal.style.display = "flex";
+        document.getElementById("inputPontos").value = "";
+      });
+
+      function confirmarTeste() {
+        const valor = Number(document.getElementById("inputPontos").value);
+
+        if (isNaN(valor)) return;
+
+        let atual = Number(localStorage.getItem("pontosTotais") || 0);
+        atual += valor;
+
+        localStorage.setItem("pontosTotais", atual);
+        atualizarPontos();
+
+        modal.style.display = "none";
+      }
+
+      // Fecha clicando fora
+      modal.addEventListener("click", (e) => {
+        if (e.target === modal) modal.style.display = "none";
         });
     </script>
   </body>
