--- a/index.html
+++ b/index.html
@@ -318,62 +318,45 @@
         document.body.appendChild(floco);
       }
 
-      /* LÓGICA ORIGINAL */
-      if (!localStorage.getItem("pontosTotais")) {
-        localStorage.setItem("pontosTotais", "0");
-      }
+       /* ========= PONTOS ========= */
+  if (!localStorage.getItem("pontosTotais")) {
+    localStorage.setItem("pontosTotais", "0");
+  }
 
-      function atualizarPontos() {
-        const pontos = localStorage.getItem("pontosTotais");
-        document.getElementById("pontosDisplay").innerText =
-          "Seus pontos: " + pontos;
-      }
+  function atualizarPontos() {
+    const pontos = localStorage.getItem("pontosTotais");
+    document.getElementById("pontosDisplay").innerText =
+      "Seus pontos: " + pontos;
+  }
 
-      atualizarPontos();
+  atualizarPontos();
 
-      document
-        .getElementById("btnTestePontos")
-        .addEventListener("click", () => {
-          let valor = prompt("Quantos pontos deseja adicionar?");
+  /* ========= MODAL SECRETO ========= */
+  const btnTeste = document.getElementById("btnTestePontos");
+  const modal = document.getElementById("modalTeste");
+  const input = document.getElementById("inputPontos");
 
-          if (!valor || isNaN(valor)) return;
+  btnTeste.addEventListener("click", () => {
+    input.value = "";
+    modal.style.display = "flex";
+  });
 
-          valor = Number(valor);
+  function confirmarTeste() {
+    const valor = Number(input.value);
+    if (isNaN(valor)) return;
 
-          let atual = Number(localStorage.getItem("pontosTotais") || 0);
-          atual += valor;
+    let atual = Number(localStorage.getItem("pontosTotais") || 0);
+    atual += valor;
 
-          localStorage.setItem("pontosTotais", atual);
-          atualizarPontos();
+    localStorage.setItem("pontosTotais", atual);
+    atualizarPontos();
 
-          alert("Pontos adicionados com sucesso!");
+    modal.style.display = "none";
+  }
 
-          const btnTeste = document.getElementById("btnTestePontos");
-      const modal = document.getElementById("modalTeste");
-
-      btnTeste.addEventListener("click", () => {
-        modal.style.display = "flex";
-        document.getElementById("inputPontos").value = "";
-      });
-
-      function confirmarTeste() {
-        const valor = Number(document.getElementById("inputPontos").value);
-
-        if (isNaN(valor)) return;
-
-        let atual = Number(localStorage.getItem("pontosTotais") || 0);
-        atual += valor;
-
-        localStorage.setItem("pontosTotais", atual);
-        atualizarPontos();
-
-        modal.style.display = "none";
-      }
-
-      // Fecha clicando fora
-      modal.addEventListener("click", (e) => {
-        if (e.target === modal) modal.style.display = "none";
-        });
-    </script>
+  modal.addEventListener("click", (e) => {
+    if (e.target === modal) modal.style.display = "none";
+  });
+</script>
   </body>
 </html>
